--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <label for="seedInput">Seed</label>
         <input id="seedInput" type="text" value="phase9-demo" />
         <button id="generateButton">Générer un nouveau monde</button>
+        <button id="pauseResumeButton">Arreter simulation</button>
 
         <h2>Sauvegarde / Replay</h2>
         <button id="saveButton">Save</button>
