--- a/index.html
+++ b/index.html
@@ -24,7 +24,27 @@
       .culture-bar-fill { height:100%; background:linear-gradient(90deg, #6bcb77, #4d96ff); }
       .belief-line { margin:6px 0 0; font-size:12px; color:#c9d3e8; }
       pre { white-space:pre-wrap; background:#10141c; border:1px solid #2a3140; border-radius:6px; padding:8px; }
+      .report-output { background:#10141c; border:1px solid #2a3140; border-radius:6px; padding:10px; font-size:13px; }
+      .report-title { margin:0 0 8px; font-size:16px; }
+      .report-grid { display:grid; grid-template-columns:repeat(3, minmax(0, 1fr)); gap:8px; margin-bottom:10px; }
+      .report-kpi { background:#151924; border:1px solid #2f384a; border-radius:6px; padding:8px; }
+      .report-kpi-label { display:block; color:#9fb0cc; font-size:11px; }
+      .report-kpi-value { font-size:16px; font-weight:700; }
+      .report-table { width:100%; border-collapse:collapse; font-size:12px; margin-top:6px; }
+      .report-table th, .report-table td { border-bottom:1px solid #2a3140; padding:6px 4px; text-align:left; }
+      .report-badge { display:inline-block; padding:2px 6px; border-radius:999px; font-size:11px; background:#24334f; color:#cfe1ff; }
+      .report-muted { color:#b7c5df; font-size:12px; margin-top:8px; }
+      .report-loading { color:#cfe1ff; }
+      .report-details { margin-top:8px; }
+      .report-details summary { cursor:pointer; color:#9ec1ff; }
+      .report-charts { display:grid; grid-template-columns:1fr 1fr; gap:10px; margin-top:10px; }
+      .report-chart-card { background:#151924; border:1px solid #2f384a; border-radius:6px; padding:8px; margin:0; }
+      .report-chart-title { margin:0 0 6px; font-size:12px; color:#d9e6ff; font-weight:600; }
+      .report-chart-canvas { width:100%; height:180px; border:1px solid #2a3140; border-radius:4px; background:#0e1320; display:block; }
+      .report-chart-legend { margin:6px 0 0; color:#9fb0cc; font-size:11px; }
       @media (max-width: 980px) { .layout { grid-template-columns: 1fr; } .small-grid { grid-template-columns:1fr; } }
+      @media (max-width: 980px) { .report-grid { grid-template-columns:1fr 1fr; } }
+      @media (max-width: 980px) { .report-charts { grid-template-columns:1fr; } }
     </style>
   </head>
   <body>
@@ -74,7 +94,7 @@
         <label for="ticksPerRunInput">Ticks par run</label>
         <input id="ticksPerRunInput" type="number" value="300" min="10" />
         <button id="runExperimentsButton">Run experiments</button>
-        <pre id="experimentsOutput">Résultats des expériences ici.</pre>
+        <div id="experimentsOutput" class="report-output">Rapport des experiences ici.</div>
 
         <h2>Tests moteur intégrés</h2>
         <ul id="testsOutput"></ul>
@@ -103,3 +123,4 @@
     <script type="module" src="./src/ui/main.js"></script>
   </body>
 </html>
+
